@@ -1,6 +1,7 @@
 ???
 
   * Improved: Malloc/NULL checks added (non-deprecated code only)
+  * Added: Syntax-based normalization
   * Added: Percent-encoding function Escape
   * Added: New function UnescapeInPlaceEx can also decode '+' to ' '
       and convert line breaks
